# botts

./: .gitignore  .gitmodules  Makefile  README.md  config.example.toml  config.~toml  docker-compose.yaml  pyproject.toml  requirements.txt  run.cmd  run.sh
botts/bot/: main.py
botts/bot/config/: local.py
botts/bot/handlers/: cheating.py  contest.py  grade.py  master.py  register.py  statement.py
botts/bot/handlers/infra/: register.py  start.py
botts/bot/middlewares/: formatting.py  testing_wall.py  tg_user_data.py
botts/bot/middlewares/util/: context.py
botts/bot/util/: text.py
botts/db/: __init__.py  ban.py  cf_user.py  run.py  student.py  submission.py  tg_user.py
botts/db/dao/: master.py  students.py
botts/db/util/: filter.py
botts/testsys/config/: hw02.py  hw03.py  midterm.py
botts/testsys/pipeline/: artefacts.py  pipeline.py  testing.py
common/: logging.py  terminal.py
common/testsys/: runner.py
common/transport/: sockets.py
invoker/: Dockerfile  common.py  interface.py  invokers.json  test.py
invoker/runners/: iso.py  mp.py  mpd.py
resources/grading/: cheating-pairs-all.tsv  cheating-pairs-ok.tsv  cheating.tsv  contest-02.tsv  homework-02.tsv  hw-02-stats.tsv  hw-02.tsv  hw-03.tsv  midterm.tsv
resources/tests/fixtures/: large-json.json
resources/tests/python/: x.py
scripts/: gen_cf.py  migrate.py
scripts/invokers/: Dockerfile  common.py  invoker.py  invoker_iso.py  invoker_mp.py  invoker_pi.py  invokers.json  startup.py
scripts/sql/: bans.sql  cheating-stats.sql  grade.sql  stats.sql  tmp.sql
(+74 files in other folders)
